--- a/css/scss/modal/_riskassessment.scss
+++ b/css/scss/modal/_riskassessment.scss
@@ -1,8 +1,4 @@
 .risk-evaluation-add-modal, .risk-evaluation-edit-modal {
-  .modal-active {
-    z-index: 1005;
-  }
-
   .modal-container {
     max-height: 750px;
   }
